--- a/bibsonomy-database-common/pom.xml
+++ b/bibsonomy-database-common/pom.xml
@@ -35,7 +35,7 @@
 	<parent>
 		<artifactId>bibsonomy</artifactId>
 		<groupId>org.bibsonomy</groupId>
-		<version>3.3.0</version>
+		<version>3.4.0-SNAPSHOT</version>
 	</parent>
 	<artifactId>bibsonomy-database-common</artifactId>
 	<packaging>jar</packaging>
