--- a/bibsonomy-webapp/pom.xml
+++ b/bibsonomy-webapp/pom.xml
@@ -32,7 +32,7 @@
 	<parent>
 		<artifactId>bibsonomy</artifactId>
 		<groupId>org.bibsonomy</groupId>
-		<version>3.3.0</version>
+		<version>3.4.0-SNAPSHOT</version>
 	</parent>
 	<licenses>
 		<license>
