--- a/pom.xml
+++ b/pom.xml
@@ -214,6 +214,16 @@
 			</snapshots>
 		</repository>
 	</repositories>
+	<pluginRepositories>
+		<pluginRepository>
+			<id>dev.bibsonomy.org-plugin</id>
+			<name>Official Source Code Releases of selected BibSonomy Plugins</name>
+			<url>http://dev.bibsonomy.org/maven2/</url>
+			<snapshots>
+				<updatePolicy>always</updatePolicy>
+			</snapshots>
+		</pluginRepository>
+	</pluginRepositories>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<spring.version>3.1.3.RELEASE</spring.version>
