--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/project.properties
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/project.properties
@@ -187,7 +187,7 @@ database.mysql.default.config = autoReconnect=true&useUnicode=true&characterEnco
 # database settings
 # main database
 database.main.driverClassName = com.mysql.jdbc.Driver
-database.main.url = jdbc:mysql://shredder.cs.uni-kassel.de:3308/bibsonomy?${database.mysql.default.config}
+database.main.url = jdbc:mysql://thewhite.cs.uni-kassel.de:3308/bibsonomy?${database.mysql.default.config}
 database.main.maxIdle = 50
 database.main.maxActive = 260
 database.main.maxWait = 10000
@@ -215,7 +215,7 @@ database.clicklogger.password = ${database.main.password}
 
 # tag recommender database
 database.recommender.tag.driverClassName = ${database.main.driverClassName}
-database.recommender.tag.url = jdbc:mysql://shredder.cs.uni-kassel.de:3308/bibsonomy_recommender?${database.mysql.default.config}
+database.recommender.tag.url = jdbc:mysql://thewhite.cs.uni-kassel.de:3308/bibsonomy_recommender?${database.mysql.default.config}
 database.recommender.tag.maxIdle = ${database.main.maxIdle}
 database.recommender.tag.maxActive = ${database.main.maxActive}
 database.recommender.tag.maxWait = ${database.main.maxWait}
@@ -226,7 +226,7 @@ database.recommender.tag.password =
 
 # item recommender database
 database.recommender.item.driverClassName = ${database.main.driverClassName}
-database.recommender.item.url = jdbc:mysql://shredder.cs.uni-kassel.de:3308/bibsonomy_item_recommender?${database.mysql.default.config}
+database.recommender.item.url = jdbc:mysql://thewhite.cs.uni-kassel.de:3308/bibsonomy_item_recommender?${database.mysql.default.config}
 database.recommender.item.maxIdle = ${database.main.maxIdle}
 database.recommender.item.maxActive = ${database.main.maxActive}
 database.recommender.item.maxWait = ${database.main.maxWait}
