--- a/bibsonomy-opensocial/pom.xml
+++ b/bibsonomy-opensocial/pom.xml
@@ -36,7 +36,7 @@
 	<parent>
 		<groupId>org.bibsonomy</groupId>
 		<artifactId>bibsonomy</artifactId>
-		<version>3.9.0-SNAPSHOT</version>
+		<version>3.8.6</version>
 	</parent>
 	
 	<licenses>
