--- a/pom.xml
+++ b/pom.xml
@@ -409,8 +409,8 @@
 				</property>
 			</activation>
 			<properties>
-				<maven.tomcat.server>tomcat_gromit</maven.tomcat.server>
-				<maven.tomcat.url>http://gromit.cs.uni-kassel.de:8080/manager/text</maven.tomcat.url>
+				<maven.tomcat.server>tomcat_thewhite</maven.tomcat.server>
+				<maven.tomcat.url>http://thewhite.cs.uni-kassel.de:8080/manager/text</maven.tomcat.url>
 			</properties>
 		</profile>
 	</profiles>
