--- a/bibsonomy-scraper/pom.xml
+++ b/bibsonomy-scraper/pom.xml
@@ -67,8 +67,8 @@
 			<artifactId>bibsonomy-web-common</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>commons-httpclient</groupId>
-			<artifactId>commons-httpclient</artifactId>
+			<groupId>org.apache.httpcomponents</groupId>
+			<artifactId>httpclient</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>commons-lang</groupId>
@@ -86,6 +86,19 @@
 			<artifactId>json-lib</artifactId>
 			<classifier>jdk15</classifier>
 			<version>2.4</version>
+		</dependency>
+		<dependency>
+			<groupId>jtidy</groupId>
+			<artifactId>jtidy</artifactId>
+			<version>8.0-SNAPSHOT</version>
+			<!-- dom3-xml-apis is a strange duplicate of xml-apis (cf http://sourceforge.net/tracker/?func=detail&aid=2832643&group_id=136013&atid=737763 
+				) -->
+			<exclusions>
+				<exclusion>
+					<groupId>xerces</groupId>
+					<artifactId>dom3-xml-apis</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 	</dependencies>
 	<build>
