--- a/bibsonomy-scrapingservice/pom.xml
+++ b/bibsonomy-scrapingservice/pom.xml
@@ -77,10 +77,9 @@
 			<version>1.1.2</version>
 		</dependency>
 		<dependency>
-			<groupId>commons-httpclient</groupId>
-			<artifactId>commons-httpclient</artifactId>
+			<groupId>org.apache.httpcomponents</groupId>
+			<artifactId>httpclient</artifactId>
 		</dependency>
-
 		<dependency>
 			<groupId>com.hp.hpl.jena</groupId>
 			<artifactId>jena</artifactId>
@@ -91,6 +90,7 @@
 			<artifactId>arq</artifactId>
 			<version>2.2</version>
 		</dependency>
+
 		<!--+
 		    | Otherwise, the log4j.properties from jena will be loaded. :-(
 		    +-->
