--- a/bibsonomy-rest-client-oauth/pom.xml
+++ b/bibsonomy-rest-client-oauth/pom.xml
@@ -53,6 +53,7 @@
 		<dependency>
 			<groupId>commons-httpclient</groupId>
 			<artifactId>commons-httpclient</artifactId>
+			<version>3.1</version>
 		</dependency>
 		<dependency>
 			<groupId>net.oauth.core</groupId>
