--- a/bibsonomy-rest-client/pom.xml
+++ b/bibsonomy-rest-client/pom.xml
@@ -55,6 +55,7 @@
 		<dependency>
 			<groupId>commons-httpclient</groupId>
 			<artifactId>commons-httpclient</artifactId>
+			<version>3.1</version>
 		</dependency>
 		<dependency>
 			<groupId>com.sun.xml.bind</groupId>
