--- a/bibsonomy-marc-parser/pom.xml
+++ b/bibsonomy-marc-parser/pom.xml
@@ -40,7 +40,7 @@
 	<parent>
 		<groupId>org.bibsonomy</groupId>
 		<artifactId>bibsonomy</artifactId>
-		<version>3.8.10</version>
+		<version>3.9.0-SNAPSHOT</version>
 	</parent>
 	<licenses>
 		<license>
