--- a/bibsonomy-webapp/pom.xml
+++ b/bibsonomy-webapp/pom.xml
@@ -7,7 +7,7 @@
                                   University of Kassel, Germany
                                   http://www.kde.cs.uni-kassel.de/
                               Data Mining and Information Retrieval Group,
-                                  University of WÃ¼rzburg, Germany
+                                  University of Würzburg, Germany
                                   http://www.is.informatik.uni-wuerzburg.de/en/dmir/
                               L3S Research Center,
                                   Leibniz University Hannover, Germany
@@ -168,7 +168,7 @@
 			<plugin>
 				<groupId>org.bibsonomy</groupId>
 				<artifactId>javascript-i18n-messagesource-maven-plugin</artifactId>
-				<version>1.0.0</version>
+				<version>1.0.1</version>
 				<configuration>
 					<messageSources>
 						<messageSource>file:///${project.basedir}/src/main/resources/messages</messageSource>
