--- a/bibsonomy-rest-client/pom.xml
+++ b/bibsonomy-rest-client/pom.xml
@@ -50,6 +50,10 @@
 			<groupId>org.bibsonomy</groupId>
 			<artifactId>bibsonomy-rest-common</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.bibsonomy</groupId>
+			<artifactId>bibsonomy-model</artifactId>
+		</dependency>
 		<!-- TODO: update to httpclient 4.1 (3.1 end of life) + remove bug fixes 
 			in module -->
 		<dependency>
